feat: 졸업 요건 기반 코드 작성
- 단일전공 기준 졸업요건 기반 코드 작성 완료
- 사용자의 Take를 LinkedList로 가져오고, 요건 확인에 사용될 시 삭제
- 영역 대체와 같은 경우, 삭제되지 않는 경우도 있음
- 각 과의 특수 졸업 요건은 인터페이스를 구현하여 주입시킴
- 현재 테스트 코드는 임시로 출력상태로만 작성된 상태

Resolves: #15